--- a/estadio_dragao/src/pages/aboutUs.module.css
+++ b/estadio_dragao/src/pages/aboutUs.module.css
@@ -45,6 +45,17 @@
   align-items: center;
   justify-content: center;
   font-size: 1.4rem;
+
+}
+
+.avatar img {
+
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block
+
 }
 
 .name {
